2008-07-27 15:35  art

	* [r137]
	  - ShaderAttribute continued work on it

2008-07-21 18:06  art

	* [r136]
	  - ShaderAttribute class (in development) added

2008-07-15 12:43  art

	* [r135]
	  - small changes in MRT support. Now no use of GLenums anymore but
	  direct setting up through Camera::BufferAttachment

2008-07-14 14:03  art

	* [r134]
	  - Render-to-3d-texture corrected
	  - mrt support should be now correct

2008-07-09 13:40  art

	* [r133]
	  - Support for MRT for 3D textures as output textures added. The
	  supprot should be tested!

2008-07-08 19:21  art

	* [r132]
	  - forgot to add the Image ;)

2008-07-08 19:20  art

	* [r131]
	  - Render-to-Cubemap/3DTexture parameters to the osgPPU .ppu
	  Plugin added.

2008-07-08 19:14  art

	* [r130]
	  - forgott to add the files ;)

2008-07-08 19:14  art

	* [r129]
	  - Render-to-3D-texture support added.
	  - Simple example demonstrating how to use osgPPU to render to
	  certain slices of the 3D texture is shown.

2008-07-08 17:29  art

	* [r128]
	  - cubemap example missing Data added

2008-07-08 12:25  art

	* [r127]
	  - Render-to-CubeMap example added
	  - the example should be extended to really changed the color
	  values of hte input cubemap texture. However this requires
	  transformation of texel coordinates from the cubespace into 2d
	  space. Hence this is just a color example ;)
	  - UnitInOut do now support renderin to cubemaps

2008-07-04 12:55  art

	* [r126]
	  From Sean Carmody
	  - support for output to CubeMaps from out of UnitInOut units
	  - implementation was extended for future implementation of
	  non-2d-output texture types
	  - small changes in the interface: all set-methods about output
	  texture are now moved to UnitInOut from Unit

2008-07-01 11:36  art

	* [r125]
	  From Bob Kuehne:
	  fixed PPU to work with the new birfucated osg/include header
	  structure. three changes to a FindOSG.cmake module, and then to
	  the